none: Upgrade metainfo and changelog for 3.6.9-2 release.